--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>Hello Coursera!</h1>
+	<h1>Hello Coursera! You're an asshole
+</h1>
 </body>
 </html>
